--- a/Work2VecInput.ipynb
+++ b/Work2VecInput.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1210f4e0-f0b4-4ebd-9135-c9827ff4476a",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e873b02b-2799-46dc-8f4e-6fbefceddf66",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
     "        text = f.read()\n",
     "    return text.strip().split()\n",
     "\n",
-    "words = load_tokens(\"~/Documents/text8\")\n",
+    "words = load_tokens(\"w2v/text8\")\n",
     "print(f\"Total tokens: {len(words)}\")\n",
     "\n",
     "vocab = Counter(words)\n",
