--- a/GitCommand.ipynb
+++ b/GitCommand.ipynb
@@ -1,6 +1,220 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f66ae64d-7b60-4c27-abfc-426913cc58ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up to date.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git pull"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1c4c1488-b3d0-429f-b083-9aa0f7f9a413",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\t\u001b[31mmodified:   GitCommand.ipynb\u001b[m\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t\u001b[31m.gitattributes\u001b[m\n",
+      "\t\u001b[31m.ipynb_checkpoints/\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git status"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2dba98bd-9d40-47de-a855-82c727f57372",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add GitCommand.ipynb "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d3e3ac7a-bdc0-4190-aaf5-ce0f763c3a5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 3cfb1f2] done\n",
+      " Committer: Aparna <aparna@Aparnas-MacBook-Pro.local>\n",
+      "Your name and email address were configured automatically based\n",
+      "on your username and hostname. Please check that they are accurate.\n",
+      "You can suppress this message by setting them explicitly. Run the\n",
+      "following command and follow the instructions in your editor to edit\n",
+      "your configuration file:\n",
+      "\n",
+      "    git config --global --edit\n",
+      "\n",
+      "After doing this, you may fix the identity used for this commit with:\n",
+      "\n",
+      "    git commit --amend --reset-author\n",
+      "\n",
+      " 1 file changed, 6 insertions(+)\n",
+      " create mode 100644 GitCommand.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a881839e-d750-45fa-b2b8-75351f63509c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 4, done.\n",
+      "Counting objects: 100% (4/4), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 333 bytes | 333.00 KiB/s, done.\n",
+      "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "To github.com:Aparna47/ArticleKarma.git\n",
+      "   9541b04..3cfb1f2  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "918711ef-0af1-4c09-8aa7-683eaa188936",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add Work2VecInput.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "73d30473-b847-42dd-acb1-632b8134de8d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[main 2356b04] done\n",
+      " Committer: Aparna <aparna@Aparnas-MacBook-Pro.local>\n",
+      "Your name and email address were configured automatically based\n",
+      "on your username and hostname. Please check that they are accurate.\n",
+      "You can suppress this message by setting them explicitly. Run the\n",
+      "following command and follow the instructions in your editor to edit\n",
+      "your configuration file:\n",
+      "\n",
+      "    git config --global --edit\n",
+      "\n",
+      "After doing this, you may fix the identity used for this commit with:\n",
+      "\n",
+      "    git commit --amend --reset-author\n",
+      "\n",
+      " 1 file changed, 248 insertions(+)\n",
+      " create mode 100644 Work2VecInput.ipynb\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git commit -m done"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2805831d-d288-498a-8692-b7cb44f48abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 4, done.\n",
+      "Counting objects: 100% (4/4), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 2.86 KiB | 2.86 MiB/s, done.\n",
+      "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "To github.com:Aparna47/ArticleKarma.git\n",
+      "   3cfb1f2..2356b04  main -> main\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95457b8f-e1f6-4811-9b2a-a637b44e2a81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.10"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
