--- a/w2v/EvalWord2Vec.ipynb
+++ b/w2v/EvalWord2Vec.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "47c791ed-ad6f-4388-b6d4-0bcfe0075526",
    "metadata": {},
    "outputs": [
@@ -36,24 +36,27 @@
      "output_type": "stream",
      "text": [
       "------------------------------\n",
-      "france               0.8684\n",
-      "japan                0.6312\n",
-      "india                0.6107\n",
-      "china                0.6082\n",
-      "soviet               0.5984\n",
-      "kingdom              0.5955\n",
-      "canada               0.5900\n",
-      "ii                   0.5860\n",
-      "army                 0.5723\n",
-      "russia               0.5679\n",
+      "france               0.8632\n",
+      "japan                0.6370\n",
+      "china                0.6345\n",
+      "india                0.6234\n",
+      "kingdom              0.6117\n",
+      "soviet               0.6026\n",
+      "canada               0.5931\n",
+      "union                0.5913\n",
+      "ii                   0.5895\n",
+      "russia               0.5864\n",
       "------------------------------\n"
      ]
     }
    ],
    "source": [
     "from lib8 import stream_sentences, Word2Vec, create_skipgram_generator, create_skipgram_batch_generator\n",
+    "import torch\n",
     "\n",
     "embedding_dim = 50\n",
+    "device_ids = [0, 1] # Use the first two GPUs\n",
+    "device = torch.device(f\"cuda:{device_ids[0]}\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# --- Initialize Model, Loss, and Optimizer ---\n",
     "MODEL_PATH = f\"word2vec_pytorch_{embedding_dim}.pth\"\n",
