--- a/w2v/EvalWord2Vec.ipynb
+++ b/w2v/EvalWord2Vec.ipynb
@@ -12,10 +12,10 @@
      "text": [
       "\u001b[2mUsing Python 3.12.10 environment at: /home/m/priv/opencv/4.11.0-Release/venv-py3\u001b[0m\n",
       "\u001b[2K\u001b[2mResolved \u001b[1m1 package\u001b[0m \u001b[2min 2ms\u001b[0m\u001b[0m                                            \u001b[0m\n",
-      "\u001b[2K\u001b[2mPrepared \u001b[1m1 package\u001b[0m \u001b[2min 964ms\u001b[0m\u001b[0m                                              \n",
-      "\u001b[2mUninstalled \u001b[1m1 package\u001b[0m \u001b[2min 1ms\u001b[0m\u001b[0m\n",
-      "\u001b[2K\u001b[2mInstalled \u001b[1m1 package\u001b[0m \u001b[2min 1ms\u001b[0m\u001b[0mile:///home/m/priv/opencv/ml)     \u001b[0m\n",
-      " \u001b[33m~\u001b[39m \u001b[1mlib8\u001b[0m\u001b[2m==0.0.1 (from file:///home/m/priv/opencv/ml)\u001b[0m\n"
+      "\u001b[2K\u001b[2mPrepared \u001b[1m1 package\u001b[0m \u001b[2min 1.14s\u001b[0m\u001b[0m                                              \n",
+      "\u001b[2mUninstalled \u001b[1m1 package\u001b[0m \u001b[2min 0.90ms\u001b[0m\u001b[0m\n",
+      "\u001b[2K\u001b[2mInstalled \u001b[1m1 package\u001b[0m \u001b[2min 0.78ms\u001b[0m\u001b[0m:///home/m/priv/opencv/ml/Artic\u001b[0m\n",
+      " \u001b[33m~\u001b[39m \u001b[1mlib8\u001b[0m\u001b[2m==0.0.1 (from file:///home/m/priv/opencv/ml/ArticleKarma/w2v)\u001b[0m\n"
      ]
     }
    ],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "47c791ed-ad6f-4388-b6d4-0bcfe0075526",
    "metadata": {},
    "outputs": [
@@ -35,17 +35,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--- Switched to eval mode. Pre-warming cache... ---\n",
+      "--- Calculating and caching normalized embeddings... ---\n",
+      "--- Using cached embeddings. ---\n",
+      "tensor([ 1.0131, -2.2534,  2.9557,  1.0012, -2.8855,  1.0694, -1.9559,  0.6893,\n",
+      "        -0.2117, -0.6307,  0.4645,  2.6286, -0.3848,  1.5738,  1.3697,  0.9492,\n",
+      "         0.7929, -0.4674,  0.4990, -0.5125, -0.4253,  0.4997, -0.4889,  1.8631,\n",
+      "        -2.5101, -0.6762,  2.1135,  0.3309, -0.9120,  0.4431, -0.1341, -0.5134,\n",
+      "         2.0929,  0.6448,  0.6758,  1.1500, -0.7588,  1.0896, -0.5671, -0.1161,\n",
+      "        -1.1667, -0.5457, -0.6286, -0.6150, -1.2098, -2.5519, -1.3874, -0.5012,\n",
+      "        -0.2623, -0.4730])\n",
+      "--- Using cached embeddings. ---\n",
       "------------------------------\n",
-      "france               0.8632\n",
-      "japan                0.6370\n",
-      "china                0.6345\n",
-      "india                0.6234\n",
-      "kingdom              0.6117\n",
-      "soviet               0.6026\n",
-      "canada               0.5931\n",
-      "union                0.5913\n",
-      "ii                   0.5895\n",
-      "russia               0.5864\n",
+      "vienna               0.8102\n",
+      "paris                0.7615\n",
+      "germany              0.7397\n",
+      "berlin               0.5969\n",
+      "stuttgart            0.5816\n",
+      "hamburg              0.5750\n",
+      "pres                 0.5674\n",
+      "bonn                 0.5620\n",
+      "fribourg             0.5565\n",
+      "ttingen              0.5453\n",
       "------------------------------\n"
      ]
     }
@@ -61,12 +72,20 @@
     "# --- Initialize Model, Loss, and Optimizer ---\n",
     "MODEL_PATH = f\"word2vec_pytorch_{embedding_dim}.pth\"\n",
     "\n",
-    "model = Word2Vec.load_from_checkpoint(MODEL_PATH)\n",
+    "model = Word2Vec.load_from_checkpoint(MODEL_PATH, device)\n",
     "model.eval()\n",
     "\n",
     "# Example usage:\n",
     "similar_words = model.find_most_similar('germany', top_n=10)\n",
     "# similar_words = model.find_most_similar('computer', top_n=10)\n",
+    "\n",
+    "p = model.get_vector('paris')\n",
+    "f = model.get_vector('france')\n",
+    "g = model.get_vector('germany')\n",
+    "\n",
+    "bgf = p - f + g\n",
+    "print(bgf)\n",
+    "similar_words = model.find_most_similar_by_vector(bgf, top_n=10)\n",
     "\n",
     "if similar_words:\n",
     "    print(\"-\" * 30)\n",
