--- a/Week1MLX_Integration.ipynb
+++ b/Week1MLX_Integration.ipynb
@@ -31,6 +31,98 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "eb350792-b9d4-4343-bcd4-35cf84c255a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mclemha\u001b[0m (\u001b[33mclemha-mli\u001b[0m) to \u001b[32mhttps://api.wandb.ai\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.20.1"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/Users/clementha/Documents/MLX1/ArticleKarma/wandb/run-20250612_164420-kwratr9y</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction/runs/kwratr9y' target=\"_blank\">fresh-field-3</a></strong> to <a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction' target=\"_blank\">https://wandb.ai/clemha-mli/HackerNews%20Prediction</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction/runs/kwratr9y' target=\"_blank\">https://wandb.ai/clemha-mli/HackerNews%20Prediction/runs/kwratr9y</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Integration with W&B\n",
+    "import random\n",
+    "import wandb\n",
+    "run = wandb.init(\n",
+    "    # Set the wandb entity where your project will be logged (generally your team name).\n",
+    "    entity=\"clemha-mli\",\n",
+    "    # Set the wandb project where this run will be logged.\n",
+    "    project=\"HackerNews Prediction\",\n",
+    "    # Track hyperparameters and run metadata.\n",
+    "    config={\n",
+    "        \"learning_rate\": 1e-4,\n",
+    "        \"architecture\": \"MLP with 2 hidden layers (64, 32)\",\n",
+    "        \"dataset\": \"Hackernews text and text length\",\n",
+    "        \"epochs\": 30,\n",
+    "    })\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "c1e65f13-e159-4408-8940-698958eb0f50",
    "metadata": {},
    "outputs": [],
@@ -46,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "392656e7-19f7-4eed-91b5-242bc18885f2",
    "metadata": {},
    "outputs": [
@@ -75,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "6ce050b2-29ac-4c90-9916-544ba9774af8",
    "metadata": {},
    "outputs": [],
@@ -95,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1d294b75-11c8-4e20-ae6e-f332002e1575",
    "metadata": {},
    "outputs": [],
@@ -115,71 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "d74076ee-8051-42c1-bcd4-48951440d27d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        [0.052608445, 0.26803637, 0.22208327, -0.11418...\n",
-       "1        [0.02493834, 0.16105333, -0.080145, -0.1797746...\n",
-       "2        [-0.13874899, 0.06257682, 0.44626427, -0.38524...\n",
-       "3        [-0.00486115, 0.14162472, 0.46907002, -0.51242...\n",
-       "4        [-0.062664725, 0.31050274, 0.20800501, -0.2477...\n",
-       "                               ...                        \n",
-       "99995    [-0.022318006, -0.17316714, 0.06726713, -0.202...\n",
-       "99996    [-0.14299674, 0.13791862, 0.35638934, -0.22488...\n",
-       "99997    [-0.058093797, 0.4078598, 0.2369581, -0.535846...\n",
-       "99998    [-0.019415336, 0.073686995, 0.12282366, -0.021...\n",
-       "99999    [0.13331571, -0.30977002, 0.21067713, -0.40813...\n",
-       "Name: vector, Length: 93708, dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['vector']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
-   "id": "47b9cf3e-dcb3-479d-9373-807e2eb29f64",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        11\n",
-       "1         6\n",
-       "2        12\n",
-       "3         7\n",
-       "4        11\n",
-       "         ..\n",
-       "99995     8\n",
-       "99996     8\n",
-       "99997    10\n",
-       "99998     9\n",
-       "99999     7\n",
-       "Name: length, Length: 93708, dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['length']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "2d379098-c023-417c-91f6-550f53604a50",
    "metadata": {},
    "outputs": [],
@@ -201,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d694c9cc-ee61-450e-a57f-5c1f6c751d85",
    "metadata": {},
    "outputs": [],
@@ -222,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "57d1d425-83d9-4031-b605-f75c918d29ad",
    "metadata": {},
    "outputs": [],
@@ -244,7 +272,17 @@
     "\n",
     "model = MLPRegressor(embedding_dim + 1)  # +1 for sentence length\n",
     "criterion = nn.MSELoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n"
+    "optimizer = optim.Adam(model.parameters(), lr=wandb.config['learning_rate'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0711bb12-64d2-4f6b-9e66-42f507c211b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#wandb.watch(model, log='all')"
    ]
   },
   {
@@ -257,32 +295,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Train Loss: 18.2232, Val Loss: 0.0006, R2: -0.0335, MAE: 0.0072\n",
-      "Epoch 2/20, Train Loss: 14.7430, Val Loss: 0.0006, R2: -0.0001, MAE: 0.0076\n",
-      "Epoch 3/20, Train Loss: 14.5869, Val Loss: 0.0006, R2: -0.0072, MAE: 0.0070\n",
-      "Epoch 4/20, Train Loss: 14.5201, Val Loss: 0.0006, R2: -0.0160, MAE: 0.0112\n",
-      "Epoch 5/20, Train Loss: 14.4803, Val Loss: 0.0006, R2: 0.0026, MAE: 0.0079\n",
-      "Epoch 6/20, Train Loss: 14.3714, Val Loss: 0.0006, R2: 0.0068, MAE: 0.0088\n",
-      "Epoch 7/20, Train Loss: 14.3034, Val Loss: 0.0006, R2: -0.0390, MAE: 0.0124\n",
-      "Epoch 8/20, Train Loss: 14.1955, Val Loss: 0.0006, R2: 0.0027, MAE: 0.0093\n",
-      "Epoch 9/20, Train Loss: 14.0431, Val Loss: 0.0006, R2: -0.0053, MAE: 0.0076\n",
-      "Epoch 10/20, Train Loss: 13.9157, Val Loss: 0.0006, R2: -0.0033, MAE: 0.0084\n",
-      "Epoch 11/20, Train Loss: 13.7717, Val Loss: 0.0006, R2: -0.0042, MAE: 0.0082\n",
-      "Epoch 12/20, Train Loss: 13.6211, Val Loss: 0.0006, R2: -0.0208, MAE: 0.0104\n",
-      "Epoch 13/20, Train Loss: 13.3993, Val Loss: 0.0006, R2: -0.0044, MAE: 0.0093\n",
-      "Epoch 14/20, Train Loss: 13.2552, Val Loss: 0.0006, R2: -0.0215, MAE: 0.0108\n",
-      "Epoch 15/20, Train Loss: 13.1180, Val Loss: 0.0006, R2: -0.0033, MAE: 0.0089\n",
-      "Epoch 16/20, Train Loss: 13.0353, Val Loss: 0.0006, R2: -0.0087, MAE: 0.0092\n",
-      "Epoch 17/20, Train Loss: 12.8441, Val Loss: 0.0006, R2: -0.0085, MAE: 0.0086\n",
-      "Epoch 18/20, Train Loss: 12.8645, Val Loss: 0.0006, R2: -0.0017, MAE: 0.0083\n",
-      "Epoch 19/20, Train Loss: 12.6747, Val Loss: 0.0006, R2: -0.0057, MAE: 0.0086\n",
-      "Epoch 20/20, Train Loss: 12.6291, Val Loss: 0.0006, R2: -0.0125, MAE: 0.0077\n"
+      "Epoch 1/30, Train Loss: 17.6089, Val Loss: 0.0006, R2: -0.0210, MAE: 0.0075\n",
+      "Epoch 2/30, Train Loss: 14.7942, Val Loss: 0.0006, R2: 0.0019, MAE: 0.0098\n",
+      "Epoch 3/30, Train Loss: 14.6121, Val Loss: 0.0006, R2: 0.0062, MAE: 0.0085\n",
+      "Epoch 4/30, Train Loss: 14.5218, Val Loss: 0.0006, R2: 0.0074, MAE: 0.0088\n",
+      "Epoch 5/30, Train Loss: 14.4599, Val Loss: 0.0006, R2: 0.0048, MAE: 0.0084\n",
+      "Epoch 6/30, Train Loss: 14.3959, Val Loss: 0.0006, R2: 0.0017, MAE: 0.0074\n",
+      "Epoch 7/30, Train Loss: 14.3288, Val Loss: 0.0006, R2: 0.0018, MAE: 0.0097\n",
+      "Epoch 8/30, Train Loss: 14.2771, Val Loss: 0.0006, R2: 0.0059, MAE: 0.0080\n",
+      "Epoch 9/30, Train Loss: 14.1600, Val Loss: 0.0006, R2: 0.0026, MAE: 0.0080\n",
+      "Epoch 10/30, Train Loss: 14.0237, Val Loss: 0.0006, R2: -0.0112, MAE: 0.0074\n",
+      "Epoch 11/30, Train Loss: 13.8709, Val Loss: 0.0006, R2: -0.0103, MAE: 0.0073\n",
+      "Epoch 12/30, Train Loss: 13.7443, Val Loss: 0.0006, R2: -0.0074, MAE: 0.0088\n",
+      "Epoch 13/30, Train Loss: 13.5307, Val Loss: 0.0006, R2: -0.0133, MAE: 0.0080\n",
+      "Epoch 14/30, Train Loss: 13.2615, Val Loss: 0.0006, R2: -0.0198, MAE: 0.0102\n",
+      "Epoch 15/30, Train Loss: 13.0346, Val Loss: 0.0006, R2: -0.0264, MAE: 0.0074\n",
+      "Epoch 16/30, Train Loss: 12.8014, Val Loss: 0.0006, R2: -0.0166, MAE: 0.0086\n",
+      "Epoch 17/30, Train Loss: 12.5401, Val Loss: 0.0006, R2: -0.0570, MAE: 0.0089\n",
+      "Epoch 18/30, Train Loss: 12.2707, Val Loss: 0.0006, R2: -0.0583, MAE: 0.0085\n",
+      "Epoch 19/30, Train Loss: 12.0331, Val Loss: 0.0006, R2: -0.0206, MAE: 0.0081\n",
+      "Epoch 20/30, Train Loss: 11.7872, Val Loss: 0.0006, R2: -0.0460, MAE: 0.0085\n",
+      "Epoch 21/30, Train Loss: 11.7823, Val Loss: 0.0006, R2: -0.0466, MAE: 0.0085\n",
+      "Epoch 22/30, Train Loss: 11.7129, Val Loss: 0.0006, R2: -0.0212, MAE: 0.0082\n",
+      "Epoch 23/30, Train Loss: 11.4790, Val Loss: 0.0006, R2: -0.0314, MAE: 0.0084\n",
+      "Epoch 24/30, Train Loss: 11.4905, Val Loss: 0.0006, R2: -0.0227, MAE: 0.0084\n",
+      "Epoch 25/30, Train Loss: 11.3406, Val Loss: 0.0006, R2: -0.0328, MAE: 0.0086\n",
+      "Epoch 26/30, Train Loss: 11.1187, Val Loss: 0.0006, R2: -0.0416, MAE: 0.0078\n",
+      "Epoch 27/30, Train Loss: 11.2193, Val Loss: 0.0006, R2: -0.0457, MAE: 0.0078\n",
+      "Epoch 28/30, Train Loss: 10.9167, Val Loss: 0.0006, R2: -0.0196, MAE: 0.0091\n",
+      "Epoch 29/30, Train Loss: 11.0698, Val Loss: 0.0006, R2: -0.0600, MAE: 0.0084\n",
+      "Epoch 30/30, Train Loss: 10.8847, Val Loss: 0.0007, R2: -0.1280, MAE: 0.0083\n"
      ]
     }
    ],
    "source": [
     "# Step 9: Training Loop with Validation\n",
-    "epochs = 20\n",
+    "epochs = wandb.config[\"epochs\"]\n",
     "for epoch in range(epochs):\n",
     "    model.train()\n",
     "    total_loss = 0\n",
@@ -309,7 +357,14 @@
     "    r2 = r2_score(y_true, y_pred)\n",
     "    mae = mean_absolute_error(y_true, y_pred)\n",
     "\n",
-    "    print(f\"Epoch {epoch+1}/{epochs}, Train Loss: {total_loss:.4f}, Val Loss: {avg_val_loss:.4f}, R2: {r2:.4f}, MAE: {mae:.4f}\")\n"
+    "    print(f\"Epoch {epoch+1}/{epochs}, Train Loss: {total_loss:.4f}, Val Loss: {avg_val_loss:.4f}, R2: {r2:.4f}, MAE: {mae:.4f}\")\n",
+    "    wandb.log({\n",
+    "        \"epoch\": epoch + 1,\n",
+    "        \"train_loss\": total_loss / len(train_loader),\n",
+    "        \"val_loss\": avg_val_loss,\n",
+    "        \"val_r2\": r2,\n",
+    "        \"val_mae\": mae\n",
+    "    })"
    ]
   },
   {
@@ -323,7 +378,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Test Results: R2: -0.0187, MAE: 0.0074, MSE: 0.0005\n"
+      "Test Results: R2: -0.1185, MAE: 0.0080, MSE: 0.0006\n"
      ]
     }
    ],
@@ -341,7 +396,12 @@
     "mae_test = mean_absolute_error(y_true_test, y_pred_test)\n",
     "mse_test = np.mean((np.array(y_true_test) - np.array(y_pred_test)) ** 2)\n",
     "\n",
-    "print(f\"\\nTest Results: R2: {r2_test:.4f}, MAE: {mae_test:.4f}, MSE: {mse_test:.4f}\")\n"
+    "print(f\"\\nTest Results: R2: {r2_test:.4f}, MAE: {mae_test:.4f}, MSE: {mse_test:.4f}\")\n",
+    "wandb.log({\n",
+    "    \"test_r2\": r2_test,\n",
+    "    \"test_mae\": mae_test,\n",
+    "    \"test_mse\": mse_test\n",
+    "})"
    ]
   },
   {
@@ -359,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "c4c20ab4-c00d-4277-a49c-b824f2726ad8",
    "metadata": {},
    "outputs": [
@@ -370,7 +430,7 @@
       "\n",
       "Score Prediction from New Sentence:\n",
       "Sentence: Elon Musk just died.\n",
-      "Predicted Score: 4.7644\n"
+      "Predicted Score: 7.1863\n"
      ]
     }
    ],
@@ -390,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b9425cc-b564-41e9-9682-3ea7f8a791fa",
+   "id": "ed12ec5f-0d52-4450-889d-437bb361af2c",
    "metadata": {},
    "outputs": [],
    "source": []
