--- a/w2v/EvalWord2Vec.ipynb
+++ b/w2v/EvalWord2Vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "02f35859-f00f-4327-9cee-d0eca87d2efb",
    "metadata": {},
    "outputs": [
@@ -10,24 +10,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[2mUsing Python 3.12.10 environment at: /home/m/priv/opencv/4.11.0-Release/venv-py3\u001b[0m\n",
-      "\u001b[2K\u001b[2mResolved \u001b[1m1 package\u001b[0m \u001b[2min 2ms\u001b[0m\u001b[0m                                            \u001b[0m\n",
-      "\u001b[2K\u001b[2mPrepared \u001b[1m1 package\u001b[0m \u001b[2min 1.14s\u001b[0m\u001b[0m                                              \n",
-      "\u001b[2mUninstalled \u001b[1m1 package\u001b[0m \u001b[2min 0.90ms\u001b[0m\u001b[0m\n",
-      "\u001b[2K\u001b[2mInstalled \u001b[1m1 package\u001b[0m \u001b[2min 0.78ms\u001b[0m\u001b[0m:///home/m/priv/opencv/ml/Artic\u001b[0m\n",
-      " \u001b[33m~\u001b[39m \u001b[1mlib8\u001b[0m\u001b[2m==0.0.1 (from file:///home/m/priv/opencv/ml/ArticleKarma/w2v)\u001b[0m\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Processing /Users/aparna/ArticleKarma/w2v\n",
+      "  Installing build dependencies ... \u001b[?25ldone\n",
+      "\u001b[?25h  Getting requirements to build wheel ... \u001b[?25ldone\n",
+      "\u001b[?25h  Preparing metadata (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: lib8\n",
+      "  Building wheel for lib8 (pyproject.toml) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for lib8: filename=lib8-0.0.1-py3-none-any.whl size=4726 sha256=f84951793d7622ff55e7be3e1778c65514394c1e82893186994c1b13196c84b2\n",
+      "  Stored in directory: /private/var/folders/vw/l06k308d54n8_9gm54qps8340000gn/T/pip-ephem-wheel-cache-jho1ovnl/wheels/12/e3/29/9877cf22306c90fc6412b84f1067e47f384afba536b12a1c7c\n",
+      "Successfully built lib8\n",
+      "Installing collected packages: lib8\n",
+      "  Attempting uninstall: lib8\n",
+      "    Found existing installation: lib8 0.0.1\n",
+      "    Uninstalling lib8-0.0.1:\n",
+      "      Successfully uninstalled lib8-0.0.1\n",
+      "Successfully installed lib8-0.0.1\n"
      ]
     }
    ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "!uv pip install ."
+    "!pip install ."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "47c791ed-ad6f-4388-b6d4-0bcfe0075526",
    "metadata": {},
    "outputs": [
@@ -38,25 +49,25 @@
       "--- Switched to eval mode. Pre-warming cache... ---\n",
       "--- Calculating and caching normalized embeddings... ---\n",
       "--- Using cached embeddings. ---\n",
-      "tensor([ 1.0131, -2.2534,  2.9557,  1.0012, -2.8855,  1.0694, -1.9559,  0.6893,\n",
-      "        -0.2117, -0.6307,  0.4645,  2.6286, -0.3848,  1.5738,  1.3697,  0.9492,\n",
-      "         0.7929, -0.4674,  0.4990, -0.5125, -0.4253,  0.4997, -0.4889,  1.8631,\n",
-      "        -2.5101, -0.6762,  2.1135,  0.3309, -0.9120,  0.4431, -0.1341, -0.5134,\n",
-      "         2.0929,  0.6448,  0.6758,  1.1500, -0.7588,  1.0896, -0.5671, -0.1161,\n",
-      "        -1.1667, -0.5457, -0.6286, -0.6150, -1.2098, -2.5519, -1.3874, -0.5012,\n",
-      "        -0.2623, -0.4730])\n",
+      "tensor([ 1.0206, -2.2515,  2.9227,  0.9936, -2.8610,  1.0498, -1.9977,  0.7343,\n",
+      "        -0.2055, -0.6151,  0.4477,  2.6032, -0.3928,  1.5864,  1.3785,  0.9484,\n",
+      "         0.8003, -0.4182,  0.5179, -0.5204, -0.3343,  0.4788, -0.4805,  1.8474,\n",
+      "        -2.4722, -0.6135,  2.1048,  0.3166, -0.9847,  0.4622, -0.0520, -0.5180,\n",
+      "         2.0715,  0.6134,  0.5984,  1.0649, -0.7953,  1.0343, -0.5519, -0.1473,\n",
+      "        -1.1313, -0.5440, -0.5994, -0.6517, -1.2138, -2.5281, -1.3109, -0.5043,\n",
+      "        -0.2354, -0.5100])\n",
       "--- Using cached embeddings. ---\n",
       "------------------------------\n",
-      "vienna               0.8102\n",
-      "paris                0.7615\n",
-      "germany              0.7397\n",
-      "berlin               0.5969\n",
-      "stuttgart            0.5816\n",
-      "hamburg              0.5750\n",
-      "pres                 0.5674\n",
-      "bonn                 0.5620\n",
-      "fribourg             0.5565\n",
-      "ttingen              0.5453\n",
+      "vienna               0.8103\n",
+      "paris                0.7618\n",
+      "germany              0.7410\n",
+      "berlin               0.6080\n",
+      "stuttgart            0.5881\n",
+      "hamburg              0.5814\n",
+      "bonn                 0.5726\n",
+      "pres                 0.5667\n",
+      "fribourg             0.5655\n",
+      "zurich               0.5484\n",
       "------------------------------\n"
      ]
     }
