--- a/Week1MLX.ipynb
+++ b/Week1MLX.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
    "execution_count": 28,
    "id": "8f2c2764-577e-4a4f-b298-0143170cfffe",
    "metadata": {
@@ -31,20 +30,14 @@
   },
   {
    "cell_type": "code",
-=======
->>>>>>> Stashed changes
    "execution_count": 1,
    "id": "f7385ecb-6a10-45a7-8fcf-37463ddeb178",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-<<<<<<< Updated upstream
     "df = pd.read_csv(\"Inputs1stGen.csv\", low_memory = False)\n",
     "df = df.dropna()"
-=======
-    "df = pd.read_csv(\"Inputs1stGen.csv\", low_memory = False)"
->>>>>>> Stashed changes
    ]
   },
   {
@@ -280,11 +273,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
    "execution_count": 7,
-=======
-   "execution_count": 30,
->>>>>>> Stashed changes
    "id": "38c3c575-5441-45a6-9aea-4597e7699695",
    "metadata": {},
    "outputs": [
@@ -730,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "deb212af-3a6e-4a3d-a766-02697e15c1f4",
    "metadata": {},
    "outputs": [
@@ -770,7 +759,28 @@
       "Epoch [4/100], Train Loss: 3529.1691, Val Loss: 3508.4304\n",
       "Epoch [5/100], Train Loss: 3529.4222, Val Loss: 3511.0494\n",
       "Epoch [6/100], Train Loss: 3529.8232, Val Loss: 3508.3284\n",
-      "Epoch [7/100], Train Loss: 3529.5480, Val Loss: 3505.9135\n"
+      "Epoch [7/100], Train Loss: 3529.5480, Val Loss: 3505.9135\n",
+      "Epoch [8/100], Train Loss: 3530.9725, Val Loss: 3506.8651\n",
+      "Epoch [9/100], Train Loss: 3532.7051, Val Loss: 3513.3167\n",
+      "Epoch [10/100], Train Loss: 3532.1790, Val Loss: 3508.6727\n",
+      "Epoch [11/100], Train Loss: 3533.3297, Val Loss: 3508.3278\n",
+      "Epoch [12/100], Train Loss: 3532.3119, Val Loss: 3513.5529\n",
+      "Epoch [13/100], Train Loss: 3532.6088, Val Loss: 3512.1245\n",
+      "Epoch [14/100], Train Loss: 3533.8567, Val Loss: 3507.6284\n",
+      "Epoch [15/100], Train Loss: 3535.0015, Val Loss: 3509.2303\n",
+      "Epoch [16/100], Train Loss: 3534.7028, Val Loss: 3510.7378\n",
+      "Epoch [17/100], Train Loss: 3533.5671, Val Loss: 3508.6005\n",
+      "Early stopping at epoch 17 as validation loss did not improve for 10 epochs.\n",
+      "Model training finished.\n",
+      "\n",
+      "Model Evaluation on Test Set:\n",
+      "Mean Squared Error (MSE): 3505.91\n",
+      "Mean Absolute Error (MAE): 20.93\n",
+      "R-squared (R²): 0.02\n",
+      "\n",
+      "Prediction for sample 0:\n",
+      "Actual Upvotes: 4.0\n",
+      "Predicted Upvotes: 10.05\n"
      ]
     }
    ],
