Scaled the Score, reduced learning rate and logs the trained weights

--- a/Week1MLX.ipynb
+++ b/Week1MLX.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "8f2c2764-577e-4a4f-b298-0143170cfffe",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9c63e32c-2edd-4fa3-9560-25ee4635c443",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/Users/clementha/Documents/MLX1/ArticleKarma/wandb/run-20250613_110625-5bpgjbqk</code>"
+       "Run data is saved locally in <code>/Users/clementha/Documents/MLX1/ArticleKarma/wandb/run-20250613_131256-plbdql4y</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction%20from%20HyperParameterHippies/runs/5bpgjbqk' target=\"_blank\">glad-wave-2</a></strong> to <a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction%20from%20HyperParameterHippies' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
+       "Syncing run <strong><a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction%20from%20HyperParameterHippies/runs/plbdql4y' target=\"_blank\">winter-resonance-3</a></strong> to <a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction%20from%20HyperParameterHippies' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/developer-guide' target=\"_blank\">docs</a>)<br>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -96,7 +96,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction%20from%20HyperParameterHippies/runs/5bpgjbqk' target=\"_blank\">https://wandb.ai/clemha-mli/HackerNews%20Prediction%20from%20HyperParameterHippies/runs/5bpgjbqk</a>"
+       " View run at <a href='https://wandb.ai/clemha-mli/HackerNews%20Prediction%20from%20HyperParameterHippies/runs/plbdql4y' target=\"_blank\">https://wandb.ai/clemha-mli/HackerNews%20Prediction%20from%20HyperParameterHippies/runs/plbdql4y</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -116,7 +116,7 @@
     "    project=\"HackerNews Prediction from HyperParameterHippies\",\n",
     "    # Track hyperparameters and run metadata.\n",
     "    config={\n",
-    "        \"learning_rate\": 0.001,\n",
+    "        \"learning_rate\": 1e-4,\n",
     "        \"architecture\": \"Our architecture\",\n",
     "        \"dataset\": \"Hackernews text and a lot\",\n",
     "        \"epochs\": 30,\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c577c4c2-baa0-4743-ae47-d5404b4be06a",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "26532795-6b37-4dd8-8bdd-a6e78cb43e0c",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "5eac54ae-e678-4ba5-b8f2-c4b7c95a6f57",
    "metadata": {},
    "outputs": [
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "50a6eb87-f621-4557-ae6c-1ba2265a1e4c",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "38c3c575-5441-45a6-9aea-4597e7699695",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "ed7a59f6-d5e1-4815-ad20-00378a9781cd",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        ")"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "3560e65a-3c01-4719-8df3-cdbf8155c4e1",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "b0a2df4b-05ce-47b6-b453-8c456cc4ab89",
    "metadata": {},
    "outputs": [],
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "id": "d564d13e-0814-47d8-8cc3-54986dfb71b5",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "id": "2d433c7b-6ed7-40e3-a16e-ea54892c6348",
    "metadata": {},
    "outputs": [
@@ -465,7 +465,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing URLs: 100%|██████████████████| 93708/93708 [00:02<00:00, 41006.01it/s]\n"
+      "Parsing URLs: 100%|████████████████████| 93708/93708 [00:02<00:00, 41452.59it/s]\n"
      ]
     }
    ],
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "id": "813127ec-43e3-4fc5-8d2c-29460b123364",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "83995136-b25a-4ae1-b361-22772f061673",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "b474c7dc-7120-4bd0-a210-3637e14ad73e",
    "metadata": {},
    "outputs": [],
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "id": "4e63fec9-53e1-43f8-971d-e7e7e48275ef",
    "metadata": {},
    "outputs": [],
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "id": "65c7fff1-ae98-440c-b6ee-d1fb55e61d9e",
    "metadata": {},
    "outputs": [
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "2b25468a-d842-425b-af45-2d7c3236186c",
    "metadata": {
     "scrolled": true
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "id": "5f7b224f-4b31-45dd-ab10-2213f8ad604e",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "084532f7-67b1-4a5f-b007-04505f4537a0",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "id": "7ec72bb9-866c-4948-80dd-ece93c462aac",
    "metadata": {},
    "outputs": [
@@ -688,7 +688,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating sentence embeddings: 100%|█| 93707/93707 [00:02<00:00, 37361.58it/s\n"
+      "Generating sentence embeddings: 100%|██| 93707/93707 [00:02<00:00, 38803.48it/s]"
      ]
     },
     {
@@ -696,6 +696,13 @@
      "output_type": "stream",
      "text": [
       "[DEBUG] title_embeddings.shape = (93707, 50)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -713,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "deb212af-3a6e-4a3d-a766-02697e15c1f4",
    "metadata": {},
    "outputs": [
@@ -747,6 +754,7 @@
     }
    ],
    "source": [
+    "from sklearn.preprocessing import StandardScaler, MinMaxScaler\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
@@ -811,9 +819,13 @@
     "    domain_one_hot_features_array = np.empty((len(df), 0))\n",
     "    print(\"[DEBUG] 'domain_name' column not available, skipping domain one-hot encoding.\")\n",
     "\n",
+    "df['score_scaled'] = MinMaxScaler().fit_transform(df[['score']])\n",
+    "\n",
     "# Combine features and target\n",
     "X = np.hstack((numerical_features, user_one_hot_features_array, domain_one_hot_features_array, title_embeddings))\n",
-    "y = df[['score']].values.reshape(-1, 1)\n",
+    "#y = df[['score']].values.reshape(-1, 1)\n",
+    "y = df[['score_scaled']].values.reshape(-1, 1)\n",
+    "\n",
     "print(f\"[DEBUG] Shape of target variable (y): {y.shape}\")\n",
     "\n",
     "# Convert to PyTorch tensors\n",
@@ -883,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "id": "34b2c9ef-570b-463f-8cb9-d3260a66a0c4",
    "metadata": {},
    "outputs": [
@@ -906,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 49,
    "id": "04307e44-1ea0-4285-8eeb-98179a5fdf41",
    "metadata": {},
    "outputs": [
@@ -916,43 +928,50 @@
      "text": [
       "\n",
       "Starting model training...\n",
-      "Epoch [1/100], Train Loss: 1338.2567, Val Loss: 1615.6520\n",
-      "Epoch [2/100], Train Loss: 1326.2476, Val Loss: 1616.1658\n",
-      "Epoch [3/100], Train Loss: 1321.7515, Val Loss: 1616.6325\n",
-      "Epoch [4/100], Train Loss: 1320.7929, Val Loss: 1618.7513\n",
-      "Epoch [5/100], Train Loss: 1316.9074, Val Loss: 1616.6979\n",
-      "Epoch [6/100], Train Loss: 1315.3552, Val Loss: 1614.0039\n",
-      "Epoch [7/100], Train Loss: 1313.6928, Val Loss: 1615.9708\n",
-      "Epoch [8/100], Train Loss: 1310.8122, Val Loss: 1617.7590\n",
-      "Epoch [9/100], Train Loss: 1311.7611, Val Loss: 1616.1585\n",
-      "Epoch [10/100], Train Loss: 1307.9131, Val Loss: 1617.6413\n",
-      "Epoch [11/100], Train Loss: 1305.7236, Val Loss: 1623.5347\n",
-      "Epoch [12/100], Train Loss: 1302.2046, Val Loss: 1616.8567\n",
-      "Epoch [13/100], Train Loss: 1298.4147, Val Loss: 1617.9507\n",
-      "Epoch [14/100], Train Loss: 1292.0043, Val Loss: 1621.3748\n",
-      "Epoch [15/100], Train Loss: 1286.7415, Val Loss: 1621.6066\n",
-      "Epoch [16/100], Train Loss: 1282.1002, Val Loss: 1625.7407\n",
-      "Epoch [17/100], Train Loss: 1274.7641, Val Loss: 1624.4165\n",
-      "Epoch [18/100], Train Loss: 1266.6949, Val Loss: 1627.3319\n",
-      "Epoch [19/100], Train Loss: 1257.6349, Val Loss: 1630.1111\n",
-      "Epoch [20/100], Train Loss: 1244.3046, Val Loss: 1632.0454\n",
-      "Epoch [21/100], Train Loss: 1234.3909, Val Loss: 1629.2072\n",
-      "Epoch [22/100], Train Loss: 1213.3452, Val Loss: 1632.8840\n",
-      "Epoch [23/100], Train Loss: 1197.6698, Val Loss: 1636.1423\n",
-      "Epoch [24/100], Train Loss: 1180.6920, Val Loss: 1635.6946\n",
-      "Epoch [25/100], Train Loss: 1172.4620, Val Loss: 1637.4932\n",
-      "Epoch [26/100], Train Loss: 1170.1463, Val Loss: 1628.5531\n",
-      "Epoch [27/100], Train Loss: 1144.5238, Val Loss: 1636.9088\n",
-      "Epoch [28/100], Train Loss: 1154.1603, Val Loss: 1637.6166\n",
-      "Epoch [29/100], Train Loss: 1131.8574, Val Loss: 1631.6500\n",
-      "Epoch [30/100], Train Loss: 1132.6436, Val Loss: 1638.6661\n",
-      "Epoch [31/100], Train Loss: 1111.7148, Val Loss: 1639.1638\n",
-      "Epoch [32/100], Train Loss: 1109.8625, Val Loss: 1629.3082\n",
-      "Epoch [33/100], Train Loss: 1109.0134, Val Loss: 1630.3276\n",
-      "Epoch [34/100], Train Loss: 1107.2006, Val Loss: 1638.6533\n",
-      "Epoch [35/100], Train Loss: 1096.7789, Val Loss: 1628.4085\n",
-      "Epoch [36/100], Train Loss: 1109.6935, Val Loss: 1635.8605\n",
-      "Early stopping at epoch 36 as validation loss did not improve for 30 epochs.\n",
+      "Epoch [1/100], Train Loss: 0.0021, Val Loss: 0.0006\n",
+      "Epoch [2/100], Train Loss: 0.0006, Val Loss: 0.0006\n",
+      "Epoch [3/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [4/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [5/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [6/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [7/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [8/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [9/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [10/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [11/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [12/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [13/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [14/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [15/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [16/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [17/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [18/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [19/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [20/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [21/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [22/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [23/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [24/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [25/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [26/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [27/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [28/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [29/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [30/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [31/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [32/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [33/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [34/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [35/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [36/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [37/100], Train Loss: 0.0005, Val Loss: 0.0006\n",
+      "Epoch [38/100], Train Loss: 0.0004, Val Loss: 0.0006\n",
+      "Epoch [39/100], Train Loss: 0.0004, Val Loss: 0.0006\n",
+      "Epoch [40/100], Train Loss: 0.0004, Val Loss: 0.0006\n",
+      "Epoch [41/100], Train Loss: 0.0004, Val Loss: 0.0006\n",
+      "Epoch [42/100], Train Loss: 0.0004, Val Loss: 0.0006\n",
+      "Epoch [43/100], Train Loss: 0.0004, Val Loss: 0.0006\n",
+      "Early stopping at epoch 43 as validation loss did not improve for 30 epochs.\n",
       "Model training finished.\n"
      ]
     }
@@ -1019,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "id": "06c5d3ad-46e9-4f0a-a6e9-0121ea8653f1",
    "metadata": {},
    "outputs": [
@@ -1029,9 +1048,16 @@
      "text": [
       "\n",
       "Model Evaluation on Test Set:\n",
-      "Mean Squared Error (MSE): 1614.00\n",
-      "Mean Absolute Error (MAE): 13.53\n",
-      "R-squared (R²): 0.01\n"
+      "Mean Squared Error (MSE): 0.00\n",
+      "Mean Absolute Error (MAE): 0.01\n",
+      "R-squared (R²): 0.01\n",
+      "Weights used: tensor([[-0.0173, -0.0582, -0.0619,  ..., -0.0380, -0.0800,  0.0437],\n",
+      "        [-0.0093,  0.0082, -0.0319,  ..., -0.0645, -0.0096, -0.0180],\n",
+      "        [-0.0256, -0.0684, -0.0298,  ..., -0.0128,  0.0633, -0.0417],\n",
+      "        ...,\n",
+      "        [ 0.0439,  0.0009,  0.0120,  ..., -0.0058,  0.0591, -0.0229],\n",
+      "        [-0.0760, -0.0027,  0.0639,  ..., -0.0601,  0.0330, -0.0280],\n",
+      "        [ 0.0065,  0.0222, -0.0347,  ...,  0.0102, -0.0129, -0.0249]])\n"
      ]
     }
    ],
@@ -1067,11 +1093,13 @@
     "print(f\"Mean Squared Error (MSE): {mse:.2f}\")\n",
     "print(f\"Mean Absolute Error (MAE): {mae:.2f}\")\n",
     "print(f\"R-squared (R²): {r2:.2f}\")\n",
+    "print(f\"Weights used: {model.network[0].weight.data}\")\n",
     "\n",
     "wandb.log({\n",
     "    \"test_r2\": r2,\n",
     "    \"MSE\": mse,\n",
     "    \"MAE\": mae,\n",
+    "    \"fc1_weights_hist\": wandb.Histogram(model.net[0].weight.data.cpu().numpy())\n",
     "})\n"
    ]
   },
